--- a/src/pages/MarketPlace/ListingRow.css
+++ b/src/pages/MarketPlace/ListingRow.css
@@ -1,5 +1,5 @@
 .Row {
     display: flex;
     text-align: center;
-    margin: 1ex 2.5% 0 2.5%;
+    margin: 1% 0% 0% 0%;
 }
